added basic client logic

--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,12 @@
     <link rel="stylesheet" href="/index.css">
 </head>
 <body>
-    <h1>Hello there!</h1>
+<textarea placeholder="Type..."
+          rows="40"
+          id="editor"
+          cols="140"
+          autocomplete="off">
+</textarea>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/index.js"></script>
